--- a/.refsrc.json
+++ b/.refsrc.json
@@ -12,5 +12,6 @@
   },
   "github": {
     "url": "https://github.com/jaywcjlove/reference"
-  }
+  },
+  "license": "Copyright (c) <b>2023</b> snbzy™"
 }
